--- a/products.html
+++ b/products.html
@@ -79,7 +79,7 @@
         </div>
         <!-- menus -->
         <div class="header-desktop-navigation-menu">
-          <a href="#">Home</a>
+          <a href="./index.html">Home</a>
         </div>
         <div class="header-desktop-navigation-menu">
           <a href="#">Brands</a>
@@ -88,7 +88,7 @@
           <a href="#">Offers</a>
         </div>
         <div class="header-desktop-navigation-menu">
-          <a href="#">Shops</a>
+          <a href="./products.html">Shops</a>
         </div>
         <div class="header-desktop-navigation-menu">
           <a href="#">About us</a>
@@ -172,5 +172,137 @@
       </div>
     </div>
   </header>
+
+  <!--============== main section ============-->
+  <main class="bg-light pt-lg-4 pt-1 mt-5">
+      <div class="container p-2 mt-lg-5 pt-lg-5">
+          <!-- top banner -->
+          <div class="px-4 py-3 bg-light border border-danger rounded mb-2">
+              <h5 class="text-dark">ALL SHOPPING LIST</h5>
+              <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                <ol class="breadcrumb text-dark">
+                  <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                  <li class="breadcrumb-item text-light" aria-current="page">Shop</li>
+                </ol>
+              </nav>
+          </div>
+          <!-- filter section -->
+          <div class="row border-bottom bg-light p-2">
+              <div class="col-11">
+                All products
+              </div>
+              <div class="col-1">
+                <button class="btn btn-light text-dark">
+                    <i class="fas fa-bars text-dark"></i>
+                </button>
+              </div>
+          </div>
+          <!-- Products row -->
+          <div class="row my-3">
+              <div class="col-3">
+                  <div class="card p-2 bg-white rounded">
+                      <div class="d-flex justify-content-center align-items-start">
+                          <div class="product-image">
+
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </main>
+  <footer class="footer-section text-light" style="background-image: linear-gradient(to top left,#1a2e61 50%,#111e40 0) !important;">
+    <div class="container py-4">
+      <div class="row px-lg-2">
+        <!-- about section -->
+        <div class="col-12 col-lg-4 col-md-12 p-lg-3">
+          <div class="footer-brand-logo px-lg-3">
+            <h3>SkyLight</h3>
+            <div class="d-flex justify-content-start align-items-start">
+              <div class="icons">
+                <img src="https://img.icons8.com/external-wanicon-two-tone-wanicon/64/000000/external-service-cloud-technology-wanicon-two-tone-wanicon.png"/>
+              </div>
+              <div class="mx-2">
+                <small class="fw-lighter fs-6">Need help? Call us 24/7</small>
+                <p>0120359436,1763184959</p>
+              </div>
+            </div>
+            <br>
+            <p class="m-0 fw-bold">Contact Info</p>
+            <p>17 Badda, Dhk Street - 1234, BD</p>
+          </div>
+        </div>
+        <div class="col-12 col-lg-2 col-md-12 d-none d-md-block"></div>
+        <!-- menus -->
+        <div class="col-6 col-lg-2 col-md-6 p-lg-3 p-2">
+          <div class="footer-brand-logo d-flex flex-column justify-content-center align-items-start">
+            <h6>All Brands</h6>
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">About Us</a>
+            <a href="">Contact Us</a>
+          </div>
+        </div>
+        <!-- <div class="col-12 col-lg-1 col-md-12 d-none d-md-block"></div> -->
+        <div class="col-6 col-lg-2 col-md-6 p-lg-3 p-2">
+          <div class="footer-brand-logo d-flex flex-column justify-content-center align-items-start">
+            <h6>Quick Links</h6>
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">About Us</a>
+            <a href="">Contact Us</a>
+          </div>
+        </div>
+        <!-- <div class="col-12 col-lg-1 col-md-12"></div> -->
+        <!-- media links -->
+        <div class="col-6 col-lg-2 col-md-12 p-lg-3 p-2">
+          <div class="footer-brand-logo">
+            <div class="d-flex justify-content-start align-items-start my-2">
+              <div class="footer-fabs mx-2">
+                <i class="fab fa-facebook-square"></i>
+              </div>
+              <div class="footer-social-links">
+                <a href="">Facebook</a>
+              </div>
+            </div>
+            <div class="d-flex justify-content-start align-items-start my-2">
+              <div class="footer-fabs mx-2">
+                <i class="fab fa-facebook-square"></i>
+              </div>
+              <div class="footer-social-links">
+                <a href="">Instagram</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- contact us 12 -->
+        <!-- <div class="col-12 p-2 bg-dark ">
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+          </div>
+        </div> -->
+        <!-- copyright -->
+        <div class="col-12 border-top">
+          <div class="row">
+            <div class="col-12 col-lg-9 col-md-7 text-left"  style="text-decoration: none; font-size: 13px;color:inherit">
+              All copyright reserved by Howladar Electronis
+            </div>
+            <div class="col-12 col-lg-3 col-md-5 text-right">
+              <small><a href="https://icons8.com/icon/3686/shopping-bag" class="text-align-right"
+                  style="text-decoration: none; font-size: 13px;color:inherit">All Icon by Icons8, Thank you</a></small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- header section -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
 </body>
 </html>
