new page ui added

--- a/index.html
+++ b/index.html
@@ -12,28 +12,25 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-<style>
-  .footer-section{
-  background-image: linear-gradient(to top left,#1a2e61 50%,#111e40 0) !important;
-  }
-  a,
-  a:visited,
-  a:hover {
-    color: inherit !important;
-    text-decoration: none !important;
-  }
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <style>
+    .footer-section {
+      background-image: linear-gradient(to top left, #1a2e61 50%, #111e40 0) !important;
+    }
 
-</style>
-  </head>
+    a,
+    a:visited,
+    a:hover {
+      color: inherit !important;
+      text-decoration: none !important;
+    }
+  </style>
+</head>
 
 <body>
   <!-- header section -->
   <header class="fixed-top">
-    <div class="border-bottom">
+    <div class="border-bottom bg-white">
       <!-- desktop header -->
       <div class="container header-destop">
         <!-- brands information -->
@@ -97,7 +94,7 @@
           <a href="./index.html">Home</a>
         </div>
         <div class="header-desktop-navigation-menu">
-          <a href="#">Brands</a>
+          <a href="#brands">Brands</a>
         </div>
         <div class="header-desktop-navigation-menu">
           <a href="#">Offers</a>
@@ -131,25 +128,25 @@
         </div>
         <div class="all-side-nav-menus">
           <a href="./index.html">
-          <div class="py-3 px-3 d-flex justify-content-between align-items-center border-bottom">
-            <div class="text-muted all-side-nav-menus-text">
-              <i class="fas fa-home mx-1 text-danger"></i> Home
+            <div class="py-3 px-3 d-flex justify-content-between align-items-center border-bottom">
+              <div class="text-muted all-side-nav-menus-text">
+                <i class="fas fa-home mx-1 text-danger"></i> Home
+              </div>
+              <div class="text-muted all-side-nav-menus-text">
+                <i class="fas fa-chevron-right"></i>
+              </div>
             </div>
-            <div class="text-muted all-side-nav-menus-text">
-              <i class="fas fa-chevron-right"></i>
-            </div>
-          </div>
-        </a>
+          </a>
           <a href="./products.html">
-          <div class="py-3 px-3 d-flex justify-content-between align-items-center border-bottom">
-            <div class="text-muted all-side-nav-menus-text">
-              <i class="fas fa-shopping-bag mx-1 text-danger"></i> Shops
+            <div class="py-3 px-3 d-flex justify-content-between align-items-center border-bottom">
+              <div class="text-muted all-side-nav-menus-text">
+                <i class="fas fa-shopping-bag mx-1 text-danger"></i> Shops
+              </div>
+              <div class="text-muted all-side-nav-menus-text">
+                <i class="fas fa-chevron-right"></i>
+              </div>
             </div>
-            <div class="text-muted all-side-nav-menus-text">
-              <i class="fas fa-chevron-right"></i>
-            </div>
-          </div>
-        </a>
+          </a>
           <div class="py-3 px-3 d-flex justify-content-between align-items-center border-bottom">
             <div class="text-muted all-side-nav-menus-text">
               <i class="far fa-building mx-1 text-danger"></i> About US
@@ -193,7 +190,7 @@
   </header>
 
   <!--============= top carousel section ============= -->
-  <main class="bg-light pt-lg-4 pt-1 mt-5">
+  <main class="bg-light pt-lg-4 pt-1 mt-4">
     <div class="container p-2 mt-lg-5 pt-lg-5">
 
       <!-- ======== carousel ========= -->
@@ -221,45 +218,54 @@
 
 
       <!-- ======== services ======== -->
-      <div class="row mt-2">
-        <div class="col-12 col-lg-4 col-md-6">
-          <div class="card bg-white p-3">
-            <div class="row">
-              <div class="col-3">
-                <img style="height:65px" src="https://img.icons8.com/color/48/000000/cash-.png" class="animate__animated animate__bounce animate__slow animate__infinite"/>
-              </div>
-              <div class="col-9">
-                <p class="m-0 fw-bold h5">Cash On Delivery</p>
-                <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
-                  autem.</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4 col-md-6">
-          <div class="card bg-white p-3">
-            <div class="row">
-              <div class="col-3">
-                <img style="height:70px" src="https://img.icons8.com/color/48/000000/delivery--v2.png" class="animate__animated animate__headShake animate__slower animate__infinite"/>
-              </div>
-              <div class="col-9">
-                <p class="m-0 fw-bold h5">Free Delivery</p>
-                <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
-                  autem.</small>
+      <div class="container shadow-sm">
+        <div class="row mt-lg-4 mt-2 bg-white">
+          <div class="col-12 col-lg-4 col-md-6">
+            <div class="p-3">
+              <div class="row">
+                <div class="col-3">
+                  <img style="height:65px" src="https://img.icons8.com/color/48/000000/cash-.png"
+                    class="animate__animated animate__bounce animate__slow animate__infinite" />
+                </div>
+                <div class="col-9">
+                  <p class="m-0 fw-bold h5">Cash On Delivery</p>
+                  <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Reiciendis,
+                    autem.</small>
+                </div>
               </div>
             </div>
           </div>
-        </div> 
-        <div class="col-12 col-lg-4 col-md-6">
-          <div class="card bg-white p-3">
-            <div class="row">
-              <div class="col-3">
-                <img src="https://img.icons8.com/external-wanicon-two-tone-wanicon/64/000000/external-service-cloud-technology-wanicon-two-tone-wanicon.png" class="animate__animated animate__tada animate__slow animate__infinite"/>
+          <div class="col-12 col-lg-4 col-md-6">
+            <div class="p-3">
+              <div class="row">
+                <div class="col-3">
+                  <img style="height:90px" src="https://img.icons8.com/color/48/000000/delivery--v2.png"
+                    class="animate__animated animate__headShake animate__slower animate__infinite" />
+                </div>
+                <div class="col-9">
+                  <p class="m-0 fw-bold h5">Free Delivery</p>
+                  <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Reiciendis,
+                    autem.</small>
+                </div>
               </div>
-              <div class="col-9">
-                <p class="m-0 fw-bold h5">24/7 Active service</p>
-                <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
-                  autem.</small>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-6">
+            <div class="p-3">
+              <div class="row">
+                <div class="col-3">
+                  <img
+                    src="https://img.icons8.com/external-wanicon-two-tone-wanicon/64/000000/external-service-cloud-technology-wanicon-two-tone-wanicon.png"
+                    class="animate__animated animate__tada animate__slow animate__infinite" />
+                </div>
+                <div class="col-9">
+                  <p class="m-0 fw-bold h5">24/7 Active service</p>
+                  <small class="lead fs-6 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Reiciendis,
+                    autem.</small>
+                </div>
               </div>
             </div>
           </div>
@@ -267,15 +273,147 @@
       </div>
 
 
-
       <!-- =========== All Brands =========== -->
+      <div class="px-3 py-4 mt-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div>
+          <h3>Our Brands Collections</h3>
+          <p class="text-muted">Get All Your Gadget and Favourite Brands Items</p>
+        </div>
+        <button class="btn btn-sm btn-danger">Visit More <i class="fas fa-arrow-right ml-2"></i></button>
+      </div>
+      <!-- Products row -->
+      <div class="container" id="brands">
 
-    
-      <!-- =========== Features Products ======-->
+        <div class="row my-3 bg-white">
+          <!-- product 1 -->
+          <div class="col-12 col-lg-4 col-md-6 mb-4 border-end">
+            <div class="p-2 bg-white rounded">
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="product-image d-flex justify-content-center align-item-center">
+                  <img src="https://m.media-amazon.com/images/I/51z376z5iBL._SL1200_.jpg" alt="" srcset=""
+                    style="height:200px;">
+                </div>
+                <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                  <p class="m-0 text-muted">Sony Brand</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- product 2 -->
+          <div class="col-12 col-lg-8 col-md-6 mb-4">
+            <div class="row">
+              <div class="col-6 col-lg-3 col-md-6 mb-2 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/81cJ1kUT1LL._AC_SS450_.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">JBL Brand</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 3 -->
+              <div class="col-6 col-lg-3 col-md-6 mb-2 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/71ynIMjwgwL._SL1500_.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">JBL Brand</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 4 -->
+              <div class="col-6 col-lg-3 col-md-6 mb-2 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/41sGASjc4-L.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">Realme</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 5 -->
+              <div class="col-6 col-lg-3 col-md-6 mb-2 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/61K+5CdeHmL._SL1500_.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">Apple</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 6 -->
+              <div class="col-6 col-lg-3 col-md-6 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/61yeJbZkwmL._SL1500_.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">Mi</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 7 -->
+              <div class="col-6 col-lg-3 col-md-6 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://i.gadgets360cdn.com/products/large/redmi-note-10s-db-600x800-1620030866.jpg"
+                        alt="" srcset="" style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">Xiomi</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- product 8 -->
+              <div class="col-6 col-lg-3 col-md-6 border">
+                <div class="p-2 bg-white">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="product-image d-flex justify-content-center align-item-center">
+                      <img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX569_.jpg" alt="" srcset=""
+                        style="height:90px;">
+                    </div>
+                    <div class="product-info d-flex flex-column justify-content-start align-items-start">
+                      <p class="m-0 text-muted">OPPO</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <!-- ================== -->
+
+      <!--========== Comercial banner ===============-->
+      <!--========== Comercial banner ===============-->
+      <!-- ================ Top Trending Products ========== -->
     </div>
   </main>
   <!-- ============== footer section ============ -->
-  <footer class="footer-section text-light" style="background-image: linear-gradient(to top left,#1a2e61 50%,#111e40 0) !important;">
+  <footer class="footer-section text-light"
+    style="background-image: linear-gradient(to top left,#1a2e61 50%,#111e40 0) !important;">
     <div class="container py-4">
       <div class="row px-lg-2">
         <!-- about section -->
@@ -284,7 +422,8 @@
             <h3>SkyLight</h3>
             <div class="d-flex justify-content-start align-items-start">
               <div class="icons">
-                <img src="https://img.icons8.com/external-wanicon-two-tone-wanicon/64/000000/external-service-cloud-technology-wanicon-two-tone-wanicon.png"/>
+                <img
+                  src="https://img.icons8.com/external-wanicon-two-tone-wanicon/64/000000/external-service-cloud-technology-wanicon-two-tone-wanicon.png" />
               </div>
               <div class="mx-2">
                 <small class="fw-lighter fs-6">Need help? Call us 24/7</small>
@@ -301,18 +440,20 @@
         <div class="col-6 col-lg-2 col-md-6 p-lg-3 p-2">
           <div class="footer-brand-logo d-flex flex-column justify-content-center align-items-start">
             <h6>All Brands</h6>
-            <a href="">Home</a>
-            <a href="">Products</a>
-            <a href="">About Us</a>
-            <a href="">Contact Us</a>
+            <p class="m-0">Realme</p>
+            <p class="m-0">Xiomie</p>
+            <p class="m-0">Oppo</p>
+            <p class="m-0">Boat</p>
+            <p class="m-0">Apple</p>
+            <p class="m-0">JBL</p>
           </div>
         </div>
         <!-- <div class="col-12 col-lg-1 col-md-12 d-none d-md-block"></div> -->
         <div class="col-6 col-lg-2 col-md-6 p-lg-3 p-2">
           <div class="footer-brand-logo d-flex flex-column justify-content-center align-items-start">
             <h6>Quick Links</h6>
-            <a href="">Home</a>
-            <a href="">Products</a>
+            <a href="./index.html">Home</a>
+            <a href="./">Products</a>
             <a href="">About Us</a>
             <a href="">Contact Us</a>
           </div>
@@ -349,7 +490,8 @@
         <!-- copyright -->
         <div class="col-12 border-top">
           <div class="row">
-            <div class="col-12 col-lg-9 col-md-7 text-left"  style="text-decoration: none; font-size: 13px;color:inherit">
+            <div class="col-12 col-lg-9 col-md-7 text-left"
+              style="text-decoration: none; font-size: 13px;color:inherit">
               All copyright reserved by Howladar Electronis
             </div>
             <div class="col-12 col-lg-3 col-md-5 text-right">
