--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </header>
 
   <!--============= top carousel section ============= -->
-  <main class="bg-light pt-lg-4 pt-1 mt-4">
+  <main class="bg-light pt-2 pt-lg-4 mt-5">
     <div class="container p-2 mt-lg-5 pt-lg-5">
 
       <!-- ======== carousel ========= -->
